tests/ui/imports/issue-81413.stderr
error[E0432]: unresolved import `doesnt_exist`
  --> $DIR/issue-81413.rs:7:9
   |
LL | pub use doesnt_exist::*;
   |         ^^^^^^^^^^^^ you might be missing crate `doesnt_exist`
   |
   = help: consider adding `extern crate doesnt_exist` to use the `doesnt_exist` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
